--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2"
   },
