--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx webpack serve --open",
     "build": "webpack"
   },
   "keywords": [],
@@ -13,7 +14,8 @@
   "devDependencies": {
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.39.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
